# task-tracker

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  install.sh
backend/: Cargo.toml
backend/application/: Cargo.toml
backend/application/src/task/: mod.rs  task_filter_and_sort_dto.rs  task_repository.rs  task_repository_trait.rs  task_service.rs  task_service_trait.rs
backend/domain/: Cargo.toml
backend/domain/src/: task.rs
backend/infrastructure/: Cargo.toml
backend/infrastructure/src/: main.rs
backend/infrastructure/src/api/: task_controller.rs
backend/infrastructure/src/mapper/: mod.rs  task_filter_and_sort_mapper.rs  task_mapper.rs
backend/infrastructure/src/persistence/: mod.rs
backend/infrastructure/src/persistence/entity/: task.rs
backend/infrastructure/src/persistence/migration/: lib.rs  m20251103_183001_create_table.rs  mod.rs
backend/infrastructure/src/persistence/repository/: mod.rs  task_repository.rs  task_repository_impl.rs
backend/src/: main.rs
backend/src/domain/: task.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/api/: task_controller.rs
backend/src/infrastructure/mapper/: mod.rs
frontend/: Cargo.toml  index.html
frontend/src/: api.rs  api_config.rs  main.rs
frontend/src/components/: mod.rs  task_item.rs  task_list.rs  utils.rs
local-support/: docker-compose.yml
openapi/: openapi.yaml
src/: controller.rs  main.rs
src/application/task/: task_service.rs
src/domain/: task.rs
src/infrastructure/: mod.rs
src/infrastructure/api/: task_controller.rs
src/infrastructure/mapper/: task_mapper.rs
src/infrastructure/persistence/: task_repository.rs
swagger/: index.html
(+2 files in other folders)
