[package]
name = "task-tracker-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
api_client = { path = "../target/generated/frontend/openapi" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlSelectElement",
    "HtmlInputElement",
    "EventTarget",
] }
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
