[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
openapi_client = { path = "target/generated/openapi" }
domain = { path = "../domain" }
application = { path = "../application" }
actix-web = "4"
actix-files = "0.6"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
anyhow = "1"
o2o = "0.5.4"
actix-cors = "0.7.1"
async-trait = "0.1"
